k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omniscope
  labels:
    name: omniscope
    environment: production
